[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gregory Smith <greg@agilefrontiers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
